Intro to JavaScript

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript intro</title>
 </head>
+
 <body>
-    <h1>JavaScript rules!</h1>
+    <h1>JavaScript rules! </h1>
+<!-- scriptų gali būti daug, bet jie, bent jau kolkas, visada rašosi <body> pabaigoje -->
+    <script src="./js/main.js" defer></script>
 </body>
 </html>
