--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <h1>JavaScript rules! </h1>
+    <h1>JavaScript rules! 🙌  </h1>
 <!-- scriptų gali būti daug, bet jie, bent jau kolkas, visada rašosi <body> pabaigoje -->
-    <script src="./js/main.js" defer></script>
+    <script src="./js/strings.js" defer></script>
 </body>
 </html>
