Teksto formavimas (strings)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>JavaScript rules! 🙌  </h1>
 <!-- scriptų gali būti daug, bet jie, bent jau kolkas, visada rašosi <body> pabaigoje -->
-    <script src="./js/strings.js" defer></script>
+    <script src="./js/array.js" defer></script>
 </body>
 </html>
