--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="./js/main.js" defer></script> -->
     <!-- <script src="./js/strings.js" defer></script> -->
     <!-- <script src="./js/array.js" defer></script> -->
-    <script src="./js/nd.js" defer></script>
+    <!-- <script src="./js/nd.js" defer></script> -->
+    <script src="./js/if.js" defer></script>
 </body>
 </html>
