--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="./js/strings.js" defer></script> -->
     <!-- <script src="./js/array.js" defer></script> -->
     <!-- <script src="./js/nd.js" defer></script> -->
-    <script src="./js/if.js" defer></script>
+    <!-- <script src="./js/if.js" defer></script> -->
+    <script src="./js/for.js" defer></script>
 </body>
 </html>
