--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="./js/nd.js" defer></script> -->
     <!-- <script src="./js/if.js" defer></script> -->
     <!-- <script src="./js/for.js" defer></script> -->
-    <script src="./js/sum.js" defer></script>
+    <!-- <script src="./js/sum.js" defer></script> -->
+    <script src="./js/numPower.js" defer></script>
 </body>
 </html>
