--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="./js/for.js" defer></script> -->
     <!-- <script src="./js/sum.js" defer></script> -->
     <!-- <script src="./js/numPower.js" defer></script> -->
-    <script src="./js/numLength.js" defer></script>
+    <!-- <script src="./js/numLength.js" defer></script> -->
+    <script src="./js/bigNum.js" defer></script>
 </body>
 </html>
